--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             HTML5 boilerplate
         </title>
         <meta name="description" content="This is my HTML5 Boilerplate">
-        <meta name="viewport" content="width=device-with, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header>
