--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+        <link rel="manifest" href="site.webmanifest">
+        <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#44c8f5">
         <meta name="theme-color" content="#44c8f5">
     </head>
@@ -34,6 +34,10 @@
         <h3>
             Heading 3
         </h3>
+        <figure>   
+            <img src="img\yawning-cat.jpeg" alt="This is a picture of a jawning cat" srcset="">
+            <figcaption>yawning cat. Photo by Martina Misar</figcaption>
+        </figure>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. This is a <a href="https://www.google.com">visited link</a> hic nemo dicta dignissimos dolorum obcaecati nobis tenetur laudantium iusto quibusdam vero velit magnam quam quas! Iure nobis minima accusamus fuga.
         </p>
@@ -48,6 +52,39 @@
         <p>
             Add an unorderd list with 3 list items here
         </p>
+        <h3>table</h3>
+        <table>
+            <tr>
+                <th>Country</th>
+                <th>Capital</th>
+                <th>Population</th>
+                <th>Language</th>
+            </tr>
+            <tr>
+                <td>USA</td>
+                <td>Washington D.C.</td>
+                <td>305 million</td>
+                <td>English</td>
+            </tr>
+            <tr>
+                <td>Belgium</td>   
+                <td>Brussels</td>
+                <td>9 million</td>
+                <td>Dutch / Frensh</td>
+            </tr>
+            <tr>
+                <td>France</td>
+                <td>Paris</td>
+                <td>25 million</td>
+                <td>Frensh</td>
+            </tr>
+            <tr>
+                <td>Germany</td>
+                <td>Berlin</td>
+                <td>15 million</td>
+                <td>German</td>
+            </tr>
+        </table>
         <hr>
         <footer>
             <p>By <strong>Your name</strong></p>
